[package]
name = "BAMetrics"
authors = ["Guy Teichman <guyteichman@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/GuyTeichman/BAMetrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bam="0.1"
clap = {version = "4.4", features=["cargo", "derive", "env"] }
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.25.0"
strum_macros = "0.25.3"
typetag = "0.2.13"

[dev-dependencies]
rstest = "0.18"
grcov = "0.8.19"
